# Computational-Graphics-THU-2020

./: .gitignore
bigWork/: CMakeLists.txt  log.out  nohup.out  run_all.sh  test.out  text.out
bigWork/include/: Photonmap.hpp  box.hpp  camera.hpp  group.hpp  hit.hpp  hitpointmap.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  parametric.hpp  photon_tracer.hpp  plane.hpp  ray_tracer.hpp  rectangle.hpp  sampler.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp
bigWork/myTestCases/: classic.txt  magic.txt  stair.txt  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt  test06.txt
bigWork/src/: Photonmap.cpp  hitpointmap.cpp  image.cpp  main.cpp  mesh.cpp  photon_tracer.cpp  ray_tracer.cpp  sampler.cpp  scene_parser.cpp  triangletree.cpp
graphics_PA0/include/: element.hpp  image.hpp
graphics_PA1/: run_1.sh  run_2.sh
graphics_PA1/include/: camera.hpp  group.hpp  material.hpp  plane.hpp  sphere.hpp  triangle.hpp
graphics_PA1/src/: main.cpp  scene_parser.cpp
graphics_PA2/include/: group.hpp  material.hpp  mesh.hpp  sphere.hpp
graphics_PA2/src/: main.cpp
graphics_PA3/: CMakeLists.txt  run_all.sh
graphics_PA3/include/: Bernstein.hpp  curve.hpp  material.hpp  plane.hpp  sphere.hpp  triangle.hpp
graphics_PA3/ref/: basis.py
graphics_PA3/src/: Bernstein.cpp  main.cpp
graphics_PA3/testcases/: scene08_core.txt
